--- a/side.html
+++ b/side.html
@@ -9,27 +9,27 @@
 <body>
     <div class="side-div">
         <div class="ssside">
-            <div><img src="./menu item/Gauge.png" alt=""></div>
+            <div><img src="./Gauge.png" alt=""></div>
             <div><p>Dashboard</p></div>
         </div>
         <div class="sside">
-            <div><img src="./menu item/Coins.png" alt=""></div>
+            <div><img src="./Coins.png" alt=""></div>
             <div><p>Mine Abdat</p></div>
         </div>
         <div class="sside">
-            <div><img src="./menu item/CreditCard.png" alt=""></div>
+            <div><img src="./CreditCard.png" alt=""></div>
             <div><p>KYC</p></div>
         </div>
         <div class="sside">
-            <div><img src="./menu item/UsersFour.png" alt=""></div>
+            <div><img src="./UsersFour.png" alt=""></div>
             <div><p>Community</p></div>
         </div>
         <div class="sside">
-            <div><img src="./menu item/Share.png" alt=""></div>
+            <div><img src="./Share.png" alt=""></div>
             <div><p>Referal Teams</p></div>
         </div>
         <div class="sside">
-            <div><img src="./menu item/UserCircle.png" alt=""></div>
+            <div><img src="./UserCircle.png" alt=""></div>
             <div><p>Profile</p></div>
         </div>
         <div class="vvv">
@@ -37,7 +37,7 @@
         </div>
         <div class="sside">
             <div><p>Help</p></div>
-            <div><img src="./menu item/Question.png" alt=""></div>
+            <div><img src="./Question.png" alt=""></div>
         </div>
     </div>
 </body>
